// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dropdown > can be opened 1`] = `
<div>
  <div
    aria-invalid="false"
    class="_container_87c1d6"
  >
    <label
      id="«r8»"
    >
      Label
    </label>
    <button
      aria-controls="«r9»"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="«r8»"
      class="_placeholder_87c1d6"
      role="combobox"
    >
      Select an option
      <svg
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 14.95q-.2 0-.375-.062a.9.9 0 0 1-.325-.213l-4.6-4.6a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l3.9 3.9 3.9-3.9a.95.95 0 0 1 .7-.275q.425 0 .7.275a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7l-4.6 4.6q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
        />
      </svg>
    </button>
    <div
      class="_border_87c1d6 _open_87c1d6"
    />
    <div
      class="_content_87c1d6 _open_87c1d6"
    >
      <ul
        class="_content_87c1d6"
        id="«r9»"
        role="listbox"
      >
        <li
          aria-selected="false"
          role="option"
          tabindex="0"
        >
          Option 1
           
        </li>
        <li
          aria-selected="false"
          role="option"
          tabindex="0"
        >
          Option 2
           
        </li>
        <li
          aria-selected="false"
          role="option"
          tabindex="0"
        >
          Option 3
           
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown > can select a value 1`] = `
<div>
  <div
    aria-invalid="false"
    class="_container_87c1d6"
  >
    <label
      id="«ra»"
    >
      Label
    </label>
    <button
      aria-controls="«rb»"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="«ra»"
      class=""
      role="combobox"
    >
      Option 2
      <svg
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 14.95q-.2 0-.375-.062a.9.9 0 0 1-.325-.213l-4.6-4.6a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l3.9 3.9 3.9-3.9a.95.95 0 0 1 .7-.275q.425 0 .7.275a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7l-4.6 4.6q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
        />
      </svg>
    </button>
    <div
      class="_border_87c1d6 _open_87c1d6"
    />
    <div
      class="_content_87c1d6 _open_87c1d6"
    >
      <ul
        class="_content_87c1d6"
        id="«rb»"
        role="listbox"
      >
        <li
          aria-selected="false"
          role="option"
          tabindex="0"
        >
          Option 1
           
        </li>
        <li
          aria-selected="true"
          role="option"
          tabindex="0"
        >
          Option 2
           
          <svg
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
            />
          </svg>
        </li>
        <li
          aria-selected="false"
          role="option"
          tabindex="0"
        >
          Option 3
           
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown > renders a Default dropdown 1`] = `
<div>
  <div
    aria-invalid="false"
    class="_container_87c1d6"
  >
    <label
      id="«r0»"
    >
      Label
    </label>
    <button
      aria-controls="«r1»"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="«r0»"
      class="_placeholder_87c1d6"
      role="combobox"
    >
      Select an option
      <svg
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 14.95q-.2 0-.375-.062a.9.9 0 0 1-.325-.213l-4.6-4.6a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l3.9 3.9 3.9-3.9a.95.95 0 0 1 .7-.275q.425 0 .7.275a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7l-4.6 4.6q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
        />
      </svg>
    </button>
    <div
      class="_border_87c1d6"
    />
    <div
      class="_content_87c1d6"
    >
      <ul
        class="_content_87c1d6"
        id="«r1»"
        role="listbox"
      >
        <li
          aria-selected="false"
          role="option"
          tabindex="0"
        >
          Option 1
           
        </li>
        <li
          aria-selected="false"
          role="option"
          tabindex="0"
        >
          Option 2
           
        </li>
        <li
          aria-selected="false"
          role="option"
          tabindex="0"
        >
          Option 3
           
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown > renders a dropdown with a default value  1`] = `
<div>
  <div
    aria-invalid="false"
    class="_container_87c1d6"
  >
    <label
      id="«r6»"
    >
      Label
    </label>
    <button
      aria-controls="«r7»"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="«r6»"
      class=""
      role="combobox"
    >
      Option 2
      <svg
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 14.95q-.2 0-.375-.062a.9.9 0 0 1-.325-.213l-4.6-4.6a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l3.9 3.9 3.9-3.9a.95.95 0 0 1 .7-.275q.425 0 .7.275a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7l-4.6 4.6q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
        />
      </svg>
    </button>
    <div
      class="_border_87c1d6"
    />
    <div
      class="_content_87c1d6"
    >
      <ul
        class="_content_87c1d6"
        id="«r7»"
        role="listbox"
      >
        <li
          aria-selected="false"
          role="option"
          tabindex="0"
        >
          Option 1
           
        </li>
        <li
          aria-selected="true"
          role="option"
          tabindex="0"
        >
          Option 2
           
          <svg
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
            />
          </svg>
        </li>
        <li
          aria-selected="false"
          role="option"
          tabindex="0"
        >
          Option 3
           
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown > renders a dropdown with a help label 1`] = `
<div>
  <div
    aria-invalid="false"
    class="_container_87c1d6"
  >
    <label
      id="«r2»"
    >
      Label
    </label>
    <button
      aria-controls="«r3»"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="«r2»"
      class="_placeholder_87c1d6"
      role="combobox"
    >
      Select an option
      <svg
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 14.95q-.2 0-.375-.062a.9.9 0 0 1-.325-.213l-4.6-4.6a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l3.9 3.9 3.9-3.9a.95.95 0 0 1 .7-.275q.425 0 .7.275a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7l-4.6 4.6q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
        />
      </svg>
    </button>
    <div
      class="_border_87c1d6"
    />
    <div
      class="_content_87c1d6"
    >
      <ul
        class="_content_87c1d6"
        id="«r3»"
        role="listbox"
      >
        <li
          aria-selected="false"
          role="option"
          tabindex="0"
        >
          Option 1
           
        </li>
        <li
          aria-selected="false"
          role="option"
          tabindex="0"
        >
          Option 2
           
        </li>
        <li
          aria-selected="false"
          role="option"
          tabindex="0"
        >
          Option 3
           
        </li>
      </ul>
    </div>
    <span
      class="_help_87c1d6"
    >
      Optional help text.
    </span>
  </div>
</div>
`;

exports[`Dropdown > renders a dropdown with an error  1`] = `
<div>
  <div
    aria-invalid="true"
    class="_container_87c1d6"
  >
    <label
      id="«r4»"
    >
      Label
    </label>
    <button
      aria-controls="«r5»"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="«r4»"
      class="_placeholder_87c1d6"
      role="combobox"
    >
      Select an option
      <svg
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 14.95q-.2 0-.375-.062a.9.9 0 0 1-.325-.213l-4.6-4.6a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l3.9 3.9 3.9-3.9a.95.95 0 0 1 .7-.275q.425 0 .7.275a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7l-4.6 4.6q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
        />
      </svg>
    </button>
    <div
      class="_border_87c1d6"
    />
    <div
      class="_content_87c1d6"
    >
      <ul
        class="_content_87c1d6"
        id="«r5»"
        role="listbox"
      >
        <li
          aria-selected="false"
          role="option"
          tabindex="0"
        >
          Option 1
           
        </li>
        <li
          aria-selected="false"
          role="option"
          tabindex="0"
        >
          Option 2
           
        </li>
        <li
          aria-selected="false"
          role="option"
          tabindex="0"
        >
          Option 3
           
        </li>
      </ul>
    </div>
    <span
      class="_error_87c1d6"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
        />
      </svg>
      Select an option
    </span>
  </div>
</div>
`;
